# nf-energy-monitor

./: Cargo.toml  Dockerfile  README.md  renovate.json
.github/workflows/: actionlint.yml  ci.yml  hadolint.yml  validate-renovate.yml
nf-energy-logger/: Cargo.toml
nf-energy-logger/src/: main.rs
nf-energy-monitor-parser/: Cargo.toml
nf-energy-monitor-parser/src/: battery_status.rs  lib.rs  value.rs  value_map.rs
