[package]
name = "nf-energy-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.22", features = ["derive", "env"] }
influxdb2 = "0.5.2"
reqwest = { version = "0.12.9", default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
scraper = "0.21.0"
encoding_rs = "0.8.35"
futures = "0.3.31"

nf-energy-monitor-parser = { path = "../nf-energy-monitor-parser" }
